WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
214149
REGRESSION(
r217248
): ASSERT_NOT_REACHED() in toWebFrameLoadType()
https://bugs.webkit.org/show_bug.cgi?id=214149
Summary
REGRESSION(r217248): ASSERT_NOT_REACHED() in toWebFrameLoadType()
Blaze Burg
Reported
2020-07-09 10:41:11 PDT
ASSERT_NOT_REACHED() hit in toWebFrameLoadType() in WebFrame.mm, because type is FrameLoadType::ReloadExpiredOnly. This happens when remote inspection triggers a reload via InspectorPageAgent::reload() and the 'revalidateAllResources' optional argument is false or not specified.
Attachments
Patch
(2.02 KB, patch)
2020-07-09 10:57 PDT
,
Blaze Burg
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Blaze Burg
Comment 1
2020-07-09 10:41:37 PDT
<
rdar://65142563
>
Blaze Burg
Comment 2
2020-07-09 10:57:06 PDT
Created
attachment 403890
[details]
Patch
Joseph Pecoraro
Comment 3
2020-07-09 11:01:21 PDT
Comment on
attachment 403890
[details]
Patch r=me
EWS
Comment 4
2020-07-09 14:20:28 PDT
Committed
r264195
: <
https://trac.webkit.org/changeset/264195
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 403890
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug